// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (credentialsbinding) 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (credentialsbinding) 2`] = `
{
  "metadata": {
    "name": "azure-bar-quota",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (secretbinding) 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (secretbinding) 2`] = `
{
  "metadata": {
    "name": "azure-bar-quota",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with resolved additional props (dns secretbinding) 1`] = `
{
  "_isCredentialsBinding": {
    "configurable": true,
    "enumerable": false,
    "value": false,
    "writable": false,
  },
  "_isDnsBinding": {
    "configurable": true,
    "enumerable": false,
    "value": true,
    "writable": false,
  },
  "_isInfrastructureBinding": {
    "configurable": true,
    "enumerable": false,
    "value": false,
    "writable": false,
  },
  "_isSecretBinding": {
    "configurable": true,
    "enumerable": false,
    "value": true,
    "writable": false,
  },
  "_quotas": {
    "configurable": true,
    "enumerable": false,
    "value": [],
    "writable": false,
  },
  "_secret": {
    "configurable": true,
    "enumerable": false,
    "value": {
      "data": {
        "secret": "cw==",
      },
      "metadata": {
        "name": "azure-dns-secret",
        "namespace": "garden-test",
      },
    },
    "writable": false,
  },
  "_secretName": {
    "configurable": true,
    "enumerable": false,
    "value": "azure-dns-secret",
    "writable": false,
  },
  "kind": {
    "configurable": true,
    "enumerable": true,
    "value": "SecretBinding",
    "writable": true,
  },
  "metadata": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "name": "azure-dns-secretbinding",
      "namespace": "garden-test",
    },
    "writable": true,
  },
  "provider": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "type": "azure-dns",
    },
    "writable": true,
  },
  "secretRef": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "name": "azure-dns-secret",
      "namespace": "garden-test",
    },
    "writable": true,
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with resolved additional props (infra credentialsbinding) 1`] = `
{
  "_isCredentialsBinding": {
    "configurable": true,
    "enumerable": false,
    "value": true,
    "writable": false,
  },
  "_isDnsBinding": {
    "configurable": true,
    "enumerable": false,
    "value": false,
    "writable": false,
  },
  "_isInfrastructureBinding": {
    "configurable": true,
    "enumerable": false,
    "value": true,
    "writable": false,
  },
  "_isSecretBinding": {
    "configurable": true,
    "enumerable": false,
    "value": false,
    "writable": false,
  },
  "_quotas": {
    "configurable": true,
    "enumerable": false,
    "value": [],
    "writable": false,
  },
  "_secret": {
    "configurable": true,
    "enumerable": false,
    "value": {
      "data": {
        "secret": "cw==",
      },
      "metadata": {
        "name": "aws-secret",
        "namespace": "garden-test",
      },
    },
    "writable": false,
  },
  "_secretName": {
    "configurable": true,
    "enumerable": false,
    "value": "aws-secret",
    "writable": false,
  },
  "credentialsRef": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "kind": "Secret",
      "name": "aws-secret",
      "namespace": "garden-test",
    },
    "writable": true,
  },
  "kind": {
    "configurable": true,
    "enumerable": true,
    "value": "CredentialsBinding",
    "writable": true,
  },
  "metadata": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "name": "aws-credentialsbinding",
      "namespace": "garden-test",
    },
    "writable": true,
  },
  "provider": {
    "configurable": true,
    "enumerable": true,
    "value": {
      "type": "aws",
    },
    "writable": true,
  },
}
`;

exports[`stores > credential > should return credentialsBinding 1`] = `
{
  "credentialsRef": {
    "kind": "Secret",
    "name": "aws-secret",
    "namespace": "garden-test",
  },
  "kind": "CredentialsBinding",
  "metadata": {
    "name": "aws-credentialsbinding",
    "namespace": "garden-test",
  },
  "provider": {
    "type": "aws",
  },
}
`;

exports[`stores > credential > should return dnsBindingList 1`] = `
[
  "aws-route53",
  "azure-dns",
  "azure-private-dns",
  "google-clouddns",
  "openstack-designate",
  "alicloud-dns",
  "infoblox-dns",
  "netlify-dns",
  "rfc2136",
]
`;

exports[`stores > credential > should return infrastructureBindingList 1`] = `
[
  "aws",
  "azure",
  "gcp",
  "openstack",
  "alicloud",
  "ironcore",
]
`;

exports[`stores > credential > should return secret 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "aws-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return secretBinding 1`] = `
{
  "kind": "SecretBinding",
  "metadata": {
    "name": "aws-secretbinding",
    "namespace": "garden-test",
  },
  "provider": {
    "type": "aws",
  },
  "secretRef": {
    "name": "aws-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return workloadIdentity 1`] = `undefined`;
